# mlops-tinystories

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild-cuda.yaml  cloudbuild-old.yaml  cloudbuild.yaml  data.dvc  models.dvc  pyproject.toml  req.txt  requirements.txt  requirements_dev.txt  test  test2
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: coverage.yaml  dockerbuild.yaml  pytest.yml  ruff.yml
conf/: debug.yaml
conf/process_data/: debug.yaml
conf/train/: debug.yaml  quick.yaml
dockerfiles/: BuildPush.bash  base.dockerfile  base_cuda.dockerfile  build_deploy.sh  build_train.sh  deploy.dockerfile  deploy_entry.sh  entry.sh  readme.md  train_entry.sh  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
frontend/: index.html  script.js
mlops-tinystories/: __init__.py
mlopstinystories/: __init__.py  device.py  predict_model.py  profile_training.py  profiler.py  profiling.py  serve.py  train.py  train_model.py
mlopstinystories/data/: __init__.py  constants.py  data_module.py  fetch_raw_data.py  process_data.py
mlopstinystories/device/: __init__.py
mlopstinystories/models/: __init__.py  model.py
profilers/: LAPTOP-P9O7TTBR_32140.1705333923034454800.pt.trace.json  LAPTOP-P9O7TTBR_4772.1705485153854631100.pt.trace.json  LAPTOP-P9O7TTBR_9872.1705332286426889400.pt.trace.json
reports/: README.md  report.py
tests/: test_data.py  test_model.py
